2015-08-26  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/bits/hwcap.h: Add PPC_FEATURE2_HTM_NOSC.
	* sysdeps/powerpc/dl-procinfo.c:
	(_dl_powerpc_cap_flags): Added descriptor for this hwcap
	feature so it shows when LD_SHOW_AUXV=1.

2015-08-26  Paul E. Murphy  <murphyp@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/elision-lock.c
	(__arch_compare_and_exchange_val_32_acq): Remove and use common
	definition.  ISA 2.07B no longer requires full sync.

2015-08-26  Mike Frysinger  <vapier@gentoo.org>

	[BZ #18863]
	* sysdeps/unix/sysv/linux/mips/bits/siginfo.h (siginfo_t): Add _sigsys.
	(si_call_addr): Define.
	(si_syscall): Define.
	(si_arch): Define.

2015-08-26  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i586/bzero.S (USE_AS_BZERO): New.
	* sysdeps/i386/i686/bzero.S (USE_AS_BZERO): Likewise.
	* sysdeps/i386/i586/memset.S (BZERO_P): Removed.
	Check USE_AS_BZERO/SHARED instead of BZERO_P/PIC.
	(__memset_zero_constant_len_parameter): New.
	* sysdeps/i386/i686/memset.S (BZERO_P): Removed.
	Check USE_AS_BZERO/SHARED instead of BZERO_P/PIC.
	(__memset_zero_constant_len_parameter): Don't define if
	__memset_chk or USE_AS_BZERO are defined.

	* sysdeps/i386/i586/memcpy.S (MEMPCPY_P): Removed.
	Check USE_AS_MEMPCPY/SHARED instead of MEMPCPY_P/PIC.
	* sysdeps/i386/i586/mempcpy.S (USE_AS_MEMPCPY): New.

	* sysdeps/x86/Makefile [$(subdir) == elf] (CFLAGS-.os,
	tests-special, $(objpfx)tst-ld-sse-use.out): Moved to ...
	* sysdeps/i386/Makefile [$(subdir) == elf] (CFLAGS-.os,
	tests-special, $(objpfx)tst-ld-sse-use.out): Here.  Update
	comments.
	* sysdeps/x86_64/Makefile [$(subdir) == elf] (CFLAGS-.os): Add
	-mno-mmx for $(all-rtld-routines).
	* sysdeps/x86/tst-ld-sse-use.sh: Moved to ...
	* sysdeps/i386/tst-ld-sse-use.sh: Here.  Replace x86-64 with
	i386.

2015-08-26  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/generic/unwind.h
	(_Unwind_Word): Use __mode__(__unwind_word__)
	instead of __mode__(__word__).
	(_Unwind_Sword): Likewise.
